Fixed theme button flicker

--- a/places/src/app/globals.css
+++ b/places/src/app/globals.css
@@ -89,24 +89,44 @@ body {
 }
 
 @keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
   to {
     opacity: 1;
   }
 }
 
-.fade-in {
-  opacity: 0;
+.fade-in-fast-full {
   animation: fadeIn 0.3s ease-out forwards;
 }
 
+@keyframes fadeInHalf {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 0.5;
+  }
+}
+
+.fade-in-slow-half {
+  animation: fadeInHalf 1s ease-out forwards;
+}
+
 @keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
   to {
     opacity: 0;
   }
 }
 
 .fade-out {
-  opacity: 1;
   animation: fadeOut 0.2s ease-in forwards;
 }
 
@@ -127,8 +147,8 @@ body {
 }
 
 /* .color-palette {
-  color: rgb(65, 0, 140);
-  color: #b9b9b9;
+  color: #000000;
+  color: rgb(227 115 131);
   color: #ff966d;
-  color: #ddd;
+  color: #d2d2d2;
 } */
